--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/SA-khan/Threadstone#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@vitejs/plugin-react": "^3.1.0",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
@@ -34,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
