--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
-    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
     "vite": "^4.1.4"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0"
+    "eslint-config-prettier": "^8.7.0",
+    "tailwindcss": "^3.3.1"
   }
 }
